--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,6 +27,15 @@
         <!-- include summernote bs4 css/js -->
         <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.js"></script>
+        <script defer>
+            window.VerifaliaWidgetConfig = {
+            appKey: '72fe6c88d9ea43e4a8a32c6f70c0c25d'
+            };
+        </script>
+        <script defer
+        src="https://unpkg.com/verifalia-widget@1.2.0/dist/verifalia-widget.js"
+        integrity="sha512-KNWaWGZz1V4Hm+9e4pdMB0rJ/wOY3ifDIYdfnHyoRnAXtpTxvxU+beMZ6nO//qqPYWcm9uFlIA1eye6/BAnbjQ=="
+        crossorigin="anonymous"></script>
 
         <title>dcyphr: {% block title %}{% endblock %}</title>
 
