--- a/templates/browse.html
+++ b/templates/browse.html
@@ -21,8 +21,8 @@
             {{ p }}
             {% for i in range(length) %}
             <li class="p-3" style="">
-                <div class="row border-bottom border-dark pt-3">
-                    <div class="col-1 text-center" style="color: grey; font-size: 1.25em; width: 6%; margin: auto 0">
+                <div class="row border-bottom border-dark pb-3">
+                    <div class="col-1 text-center" id="likes" style="color: grey; font-size: 1.25em; width: 6%; margin: auto 0">
 
                         {{ summaries[i]['likes'] }}
                         <p>likes</p>
