--- a/templates/compare.html
+++ b/templates/compare.html
@@ -4,25 +4,27 @@
 {% endblock %}
 
 {% block main %}
-{% if length == 0 %}
-<br>
-<b>No edits to review!</b>
-{% endif %}
-{% for i in range(length) %}
+
+<div class="container mt-5">
+    <div class="text-left pl-3" style="font-size: 1.8em; ">
+        <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
+        <div class="d-inline ml-2" style="color: #017bff">Reviewing <a href="{{ articles[0]['link'] }}">{{ articles[0]["article"] }}</a></div>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Click approve for the new version to be kept or disapprove to revert back to the original version.</p>
+    </div>
 
 <section class="w3-row-padding w3-center" >
-    <h2 class="display-4 mb-5 text-primary">Review: <a href="{{ links[i] }}">{{ title[i] }}</a></h2>
         <article class="w3-half">
-                <p><b style="color: black">OLD VERSION</p></b>
-                <p>{{ articles[i]['old'] }}</p>
+                <p style="color: #017bff">ORIGINAL</p>
+                <p>{{ articles[0]['old'] | safe}}</p>
         </article>
         <article class="w3-half">
-            <p><b style="color: black">NEW VERSION</p></b>
-            <p>{{ articles[i]['new'] }}</p>
+            <p style="color: #017bff">NEW</p>
+            <p>{{ articles[0]['new'] | safe}}</p>
         </article>
+</section><br><br>
 <form method="POST">
-    <button name="approve" type="submit" value="{{ articles[i]['doi'] }}">Approve</button>
-    <button name="disapprove" type="submit" value="{{ articles[i]['doi'] }}">Disapprove</button>
+    <button name="approve" type="submit" value="{{ articles[0]['id'] }}" class="btn btn-primary">Approve</button><br><br>
+    <button name="disapprove" type="submit" value="{{ articles[0]['id'] }}" class="btn btn-primary">Disapprove</button>
 </form>
-{% endfor %}
+</div>
 {% endblock %}
