--- a/templates/method_summary.html
+++ b/templates/method_summary.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block main %}
-<br>
-<h1 style="text-align: left">{{ methods[0]["name"] }}</h1>
-<br>
-<p class="pl-4 text-weight-light" style="line-height: 40px; font-size: 20px;">
-{{ methods[0]["description"] }}
-</p>
+
+<div class="container my-3 p-4 text-left">
+    <div class="mb-2 pl-3 " style="color: DodgerBlue; font-size: 2.8em">{{ methods[0]["name"] }}</div>
+    <div class="mt-3 pl-4" style="font-size: 1.5em">
+        {{ methods[0]["description"] }}
+    </div>
+</div>
+
+<!--<br>-->
+<!--<h1 style="text-align: left">{{ methods[0]["name"] }}</h1>-->
+<!--<br>-->
+<!--<p class="pl-4 text-weight-light" style="line-height: 40px; font-size: 20px;">-->
+<!--{{ methods[0]["description"] }}-->
+<!--</p>-->
 
 {% endblock %}
