various bug fixes

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -8,7 +8,7 @@
 <div class="container mt-5">
     <div class="text-left pl-3" style="font-size: 1.8em; ">
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
-        <div class="d-inline ml-2" style="color: #017bff">Reviewing <a href="{{ articles[0]['link'] }}">{{ articles[0]["article"] }}</a></div>
+        <div class="d-inline ml-2" style="color: #017bff">Reviewing <a href="{{ articles[0]['link'] }}" target="_blank">{{ articles[0]["article"] }}</a></div>
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Click approve for the new version to be kept or disapprove to revert back to the original version.</p>
     </div>
 
