--- a/templates/edit.html
+++ b/templates/edit.html
@@ -17,7 +17,7 @@
 
 
                 <p style="font-size: medium;">
-                    Link to Original Article: <font color="#017bff"><a href="{{ link }}">{{ article[0]["article"] }}</a></font>
+                    Link to Original Article: <font color="#017bff"><a href="{{ link }}" target="_blank">{{ article[0]["article"] }}</a></font>
                 </p>
             </div>
 
