--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,7 @@
 
+html, body {
+    height: 100%;
+}
 main .form-control
 {
     /* center form controls */
@@ -15,6 +18,7 @@ main
 
     /* center contents */
     text-align: center;
+    min-height:100%;
 }
 
 main img
@@ -140,6 +144,10 @@ dl:nth-of-type(odd) {
     font-size: 2.5em;
 }
 
+#footer-content{
+    color: white;
+}
+
 #content-box{
     width: 25%;
 }
@@ -158,6 +166,20 @@ dl:nth-of-type(odd) {
     width: 100%;
     padding: 1%;
 }
+.footer{
+    position: absolute;
+    bottom: 0;
+    height: 2.5rem;
+}
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
 @media screen and (max-width: 481px){
 #likes {
     padding-right: 30px;
