--- a/templates/approvals.html
+++ b/templates/approvals.html
@@ -5,28 +5,27 @@
 
 {% block main %}
 
-{% if length == 0 %}
+<div class="container mt-5">
+    <div class="text-left pl-3" style="font-size: 1.8em; ">
+        <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
+        <div class="d-inline ml-2" style="color: #017bff">Approving <a href="{{ articles[0]['link'] }}" target="_blank">{{articles[0]['article'] }}</a></div>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px"></p>
+    </div>
+
+
 <br>
-<b>No summaries to approve!</b>
-{% endif %}
-
-{% for i in range(length) %}
-
-{{ drafts[i]["article"] }}
-<a href="{{ drafts[i]['link'] }}">Link</a>
 
 
 <form method="POST" >
-    <textarea rows="10" cols="50" name="summary" id="summary">{{ drafts[i]["summary"] | safe }}</textarea>
+    <textarea rows="10" cols="50" name="summary" id="summernote" id="summary">{{ articles[0]['summary'] }}</textarea>
     <br>
-    <input type="radio" name="approve" value="{{ drafts[i]['doi'] }} yes">
+    <input type="radio" name="approve">
     <label for="approve">Approve</label>
-    <input type="radio" name="approve" value="{{ drafts[i]['doi'] }} no">
+    <input type="radio" name="disapprove">
     <label for="approve">Disapprove</label>
         <div class="container text-center">
             <button class="btn btn-default my-3" type="submit" style="color: white; background-color: DodgerBlue">Submit</button>
         </div>
 </form>
-
-{% endfor %}
+</div>
 {% endblock %}
