fixed summernote css

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -51,7 +51,9 @@
                 <h2 style="color: DodgerBlue">Guidelines</h2>
                 <ol class="p-2" style="font-size: 0.9em;">
                     <li class="mb-3">
-                        <p class="mb-1">Minimize normalization.</p>
+                        <p class="mb-1">Minimize normalization. Don't use words that are not nouns as nouns.</p>
+                        <p class="mb-1 pl-2">Nominalized: The commencement of the ceremony will begin at noon.</p>
+                        <p class="mb-1 pl-2">Better: The ceremony will commence at noon.</p>
                     </li>
                     <li class="mb-3">
                         <p class="mb-1">Keep subjects near verbs near objects.</p>
