--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
             <h2 class="display-4 mb-5 text-primary">team</h2>
             <article class="w3-third">
                 <p><b style="color: black">Jeffrey Ma</p></b>
-                <p><b style="color: #017bff">Founder</p></b>
+                <p><b style="color: #017bff">Founder and CEO</p></b>
                 <p>jeffrey.ma.jzm5@yale.edu</p>
             </article>
             <article class="w3-third">
