--- a/templates/read.html
+++ b/templates/read.html
@@ -17,11 +17,11 @@
             </p>
 
             <p style="font-size: medium;">
-                APA citation: <em>{{ citation }}</em>
+                <a href="/apa/{{ doi }}" style="color: #017bff">APA citation (Click to edit): <em style="color: black">{{ citation }}</em></a>
             </p>
 
             <p style="font-size: medium;">
-                Dcyphr-d by <font style="color: #017bff"><a href="/public/{{ summary[0]['user_id'] }}">@{{ username[0]["username"] }}</a></font>
+                dcyphr-d by <font style="color: #017bff"><a href="/public/{{ summary[0]['user_id'] }}">@{{ username[0]["username"] }}</a></font>
             </p>
 
             <p style="font-size: medium;">
