--- a/templates/request.html
+++ b/templates/request.html
@@ -20,7 +20,7 @@
     <p></p>
     <input type="text" class="form-control" placeholder="Link" name="link" required>
     <p></p>
-    <input type="text" class="form-control" placeholder="APA citation" name="citation" required>
+    <input type="text" class="form-control" placeholder="APA citation" name="citation">
     <p></p>
     <button class="btn btn-primary" type="submit">Submit</button>
 </form>
