--- a/static/styles.css
+++ b/static/styles.css
@@ -21,6 +21,11 @@ main
     min-height:100%;
 }
 
+i{
+    border-width: 0 0 0 0 !important;
+
+}
+
 main img
 {
     /* constrain images on small screens */
