--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,8 +28,9 @@
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.js"></script>
         <script defer>
             window.VerifaliaWidgetConfig = {
-            appKey: '72fe6c88d9ea43e4a8a32c6f70c0c25d'
+            appKey: '72fe6c88d9ea43e4a8a32c6f70c0c25d',
             };
+
         </script>
         <script defer
         src="https://unpkg.com/verifalia-widget@1.2.0/dist/verifalia-widget.js"
