--- a/templates/layout.html
+++ b/templates/layout.html
@@ -98,6 +98,30 @@
         });
     });
         </script>
+
+        <script>
+            function filterFunction() {
+                  var input, filter, a, i;
+                  input = document.getElementById("myInput");
+                  filter = input.value.toUpperCase();
+                  div = document.getElementById("myDropdown");
+                  a = div.getElementsByClassName("dropdown-item");
+                  for (i = 0; i < a.length; i++) {
+                    txtValue = a[i].textContent || a[i].innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                      a[i].style.display = "";
+                    } else {
+                      a[i].style.display = "none";
+                    }
+                  }
+                }
+        </script>
+
+
+
+
+
+
         <title>dcyphr: {% block title %}{% endblock %}</title>
 
     </head>
