--- a/templates/browse.html
+++ b/templates/browse.html
@@ -25,7 +25,7 @@
                    Tags
               </a>
 
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" id="myDropdown">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink" id="myDropdown">
                 <input type="text" class="form-control" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
                 {% for i in range(tags_length) %}
 
