--- a/templates/tag.html
+++ b/templates/tag.html
@@ -12,7 +12,9 @@
         <div class="d-inline ml-2" style="color: #017bff">{{ title[0]['title'] }}</div>
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Showing articles related to {{ title[0]['title'] }}</p>
     </div>
-
+    {% if length == 0 %}
+    No summaries on this topic!
+    {% else %}
 
     <div>
         <div class="text-left pl-5">
@@ -59,5 +61,6 @@
     {% endfor %}
 </ul>
 </div>
+{% endif %}
 </div>
 {% endblock %}
