--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,7 @@
 {% endblock %}
 
 {% block main %}
-<script>
-$(window).scroll(function() {
-  $(".slideanim").each(function(){
-    var pos = $(this).offset().top;
 
-    var winTop = $(window).scrollTop();
-    if (pos < winTop + 600) {
-      $(this).addClass("slide");
-    }
-  });
-});
-</script>
 <div>
     <div id="searchbar" class="h-50">
         <section class="mb-5 h-auto">
@@ -74,12 +63,12 @@ $(window).scroll(function() {
     </div>
 
     <div>
-        <section class="w3-container w3-half w3-content my-5 p-5 slideanim">
+        <section class="w3-container w3-half w3-content my-5 p-5">
             <h2 class="display-4 text-primary">mission</h2>
             <p class="w3-justify" style="line-height: 40px;">The purpose of science is to explain the natural world to us. However, in the status quo, the knowledge and tools of science is limited to a select few that have the resources to learn it. The language in scientific articles is unnecessarily complex and full of jargon. This makes it hard even for those that have the education to keep up with the literature.</p>
             <p>Thus, <b style="color: #017bff">dcyphr</b>: an open-source platform that makes science more accessible to the public.</p>
         </section>
-        <section class="w3-container w3-half w3-content my-5 p-5 slideanim">
+        <section class="w3-container w3-half w3-content my-5 p-5">
             <h2 class="display-4 text-primary">top dcyphr-rs</h2>
             <table class="table table-striped">
                 <thead>
@@ -96,7 +85,7 @@ $(window).scroll(function() {
         </section>
     </div>
 
-        <div id="teammembers" class="p-5 mt-5 slideanim">
+        <div id="teammembers" class="p-5 mt-5">
         <section class="w3-row-padding w3-center" >
             <h2 class="display-4 mb-5 text-primary">team</h2>
             <article class="w3-third">
