--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
 {% block main %}
 
 <div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <h4 class="alert-heading">COVID-19 Write-a-thon 4/25 12PM EST to 4/26 12PM EST</h4>
+      <p><strong>$50 prize to the winning team!</strong> Register <a href="/form" target="_blank">here</a>.</p>
+      <p>Teams of up to 2 people. More instructions can be found <a href="https://docs.google.com/document/d/1uRrkxKQpI4aZVJrmxJKyMrlSyyKv3E2IyEW-kRiuo7U/edit?ts=5e8d2bf4" target="_blank">here</a>.</p>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    </div>
     <div id="searchbar" class="h-50">
         <section class="mb-5 h-auto">
 
