--- a/templates/edit.html
+++ b/templates/edit.html
@@ -57,12 +57,13 @@
                 </div>
 
                 <form method="POST" >
-                    <textarea id="summernote" name="summary" id="summary"><div id="output">{{summary}}</div></textarea>
+                    <textarea id="summernote" name="summary" id="summary">{{summary}}</textarea>
                     <div class="container text-center">
                         <button class="btn btn-default my-3" type="submit" style="color: white; background-color: DodgerBlue">Submit</button>
                     </div>
 
                 </form>
+                <div id="output"></div>
 
             </div>
 
